@@ -1,3 +1,14 @@
+2006-02-02  Mark McLoughlin  <mark@skynet.ie>
+
+	* util.c: (IDL_tree_free_real), (IDL_tree_free): handle
+	IDLN_WIDE_CHAR and IDLN_WIDE_STRING
+
+2006-02-02  Mark McLoughlin  <mark@skynet.ie>
+
+	Patch from Johnny Accot <johnny@accot.org>
+
+	* util.c: (IDL_tree_free): handle IDLN_SRCFILE
+	
 2005-08-08  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* util.c: (yyerrorl), (yywarningl): Remove use of deprecated
